# hcclient

./: .dockerignore  .flake8  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build.sh  export.sh  poetry.toml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_image.yml  flake8.yml  poetry.yml  python-publish.yml
docker/: Dockerfile  README.txt
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
examples/hooks/: command_sample.py  custom_notify.py  custom_parser.py  logger.py  logger_sample.py  prepend.py  prepend_sample.py
hcclient/: __main__.py
scripts/: README.txt  arch_entry.py  build.sh
src/hcclient/: __main__.py  client.py  config.py  formatter.py  hook.py  meta.py
src/hcclient/cli/: cli.py
src/hcclient/client/: client.py  commands.py
src/hcclient/render/: formatter.py
src/hcclient/utils/: config.py  hook.py
