[tool.poetry]
name = "hcclient"
version = "v1.18.3"
description = "A terminal client for connecting to hack.chat"

license = "Unlicense"

authors = ["AnnikaV9 <carrot.moncher@gmail.com>"]

repository = "https://github.com/AnnikaV9/hcclient"
homepage = "https://github.com/AnnikaV9/hcclient"

readme = ["docs/README.md", "LICENSE"]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
colorama = "0.4.6"
jeepney = "0.8.0"
linkify-it-py = "2.0.2"
loguru = "0.6.0"
markdown-it-py = "3.0.0"
mdit-py-plugins = "0.4.0"
mdurl = "0.1.2"
notify-py = "0.3.42"
prompt-toolkit = "3.0.41"
pygments = "2.17.2"
python-socks = "2.4.3"
pyyaml = "6.0.1"
termcolor = "2.4.0"
uc-micro-py = "1.0.2"
wcwidth = "0.2.12"
websocket-client = "1.6.4"
wsaccel = "0.6.6"
antlr4-python3-runtime = { version = "4.7.2", optional = true }
latex2sympy2 = { version = "1.9.1", optional = true }
sympy = { version = "1.12", optional = true }
mpmath = { version = "1.3.0", optional = true }

[tool.poetry.extras]
latex = ["antlr4-python3-runtime", "latex2sympy2", "sympy", "mpmath"]

[tool.poetry.scripts]
hcclient = "hcclient.__main__:main"