[tool.poetry]
name = "hcclient"
version = "v1.19.3"
description = "A terminal client for connecting to hack.chat"
license = "Unlicense"
authors = ["AnnikaV9 <carrot.moncher@gmail.com>"]
repository = "https://github.com/AnnikaV9/hcclient"
homepage = "https://github.com/AnnikaV9/hcclient"
readme = ["docs/README.md"]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
websocket-client = "1.7.0"
wsaccel = "0.6.6"
python-socks = "2.4.4"
prompt-toolkit = "3.0.43"
pyyaml = "6.0.1"
colorama = "0.4.6"
termcolor = "2.4.0"
notify-py = "0.3.42"
markdown-it-py = "3.0.0"
mdit-py-plugins = "0.4.0"
pygments = "2.17.2"
linkify-it-py = "2.0.2"
packaging = "23.2"
latex2sympy2 = { version = "1.9.1", optional = true }

[tool.poetry.extras]
latex = ["latex2sympy2"]

[tool.poetry.scripts]
hcclient = "hcclient.cli.cli:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
